JPA /24강 까지 학습

--- a/spring_basic/spring/src/main/resources/application.properties
+++ b/spring_basic/spring/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.output.ansi.enabled=always
+#jdbc \uC5F0\uACB0\uC124\uC815
+spring.datasource.username=sa
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.driver-class-name=org.h2.Driver
+#jpa \uC124\uC815 \uB85C\uADF8
+spring.jpa.show-sql=true
+# jpa \uC124\uC815 \uC790\uB3D9\uC0DD\uC131 off
+# \uC124\uC815 \uBCC0\uACBD \uD544\uC694\uC2DC\uC5D4 create
+sprig.jpa.hibernate.ddl-auto=none
+
