--- a/spring_basic/spring/build.gradle
+++ b/spring_basic/spring/build.gradle
@@ -20,6 +20,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.projectlombok:lombok:'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	//jdbc 추가
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	runtimeOnly 'com.h2database:h2:'
+	//Jpa 추가
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 tasks.named('test') {
