--- a/spring_core/build.gradle
+++ b/spring_core/build.gradle
@@ -25,6 +25,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	//JSR-330  Provider 사용을 위하여 추가
+	implementation 'jakarta.inject:jakarta.inject-api:2.0.1'
+	//request 스코프 사용을 위하여 웹 라이브러리 추가
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	//lombok 라이브러리 추가 시작
 	compileOnly 'org.projectlombok:lombok'
