김영한 spring MVC 1편 - 섹션7 기본 세팅

--- a/spring_mvc/springmvc/src/main/resources/application.properties
+++ b/spring_mvc/springmvc/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-#?? ?? ??(?? ? info)
+#최상위 로그 info 이상의 레벨을 가지는 로그 출력 (info)
 logging.level.root=info
-# ?? ?????
+# 로그 색 입히기
 spring.output.ansi.enabled=always
-#apache ?? ??
+#apache 아파치 서버 로깅
 #logging.level.org.apache.coyote.http11=debug
-# ???? ? ?? ?? ?? ??
+# spring.springmvc의  trace 이상의 레벨을 가지는 로그 출력
 logging.level.spring.springmvc=trace
