김영한 스프링 MVC 2 : 섹션4 - 검증1 - Validation -- 오류 코드와 메세지 처리1 ~ 6  학습완료

--- a/spring_mvc2/validation/src/main/resources/application.properties
+++ b/spring_mvc2/validation/src/main/resources/application.properties
@@ -1,3 +1,2 @@
 spring.output.ansi.enabled=always
-spring.messages.basename=messages,config.i18n.messages
-
+spring.messages.basename=messages,config.i18n.messages,errors
